crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@loop-recursion-error.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% for item in seq recursive %}\n  {{ loop(seq) }}\n{% endfor %}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: crates/dbt-jinja/minijinja/tests/inputs/loop-recursion-error.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "recursion limit exceeded",
    name: "loop-recursion-error.txt",
    line: 1,
}

invalid operation: recursion limit exceeded
(in loop-recursion-error.txt:1)
-------------------------- loop-recursion-error.txt ---------------------------
   1 > {% for item in seq recursive %}
   2 |   {{ loop(seq) }}
   3 | {% endfor %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    loop: <loop 0/3>,
    seq: (
        1,
        2,
        3,
    ),
}
-------------------------------------------------------------------------------
