crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@namespace.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{%- set ns = namespace() %}\n{%- set ns.foo = 0 %}\n{%- for count in range(10) %}\n  {%- set ns.foo = ns.foo + count %}\n{%- endfor %}\n{{- ns }}\n---\n{% set ns.foo = namespace() %}\n{%- set ns.foo.bar = 42 %}\n{{- ns }}\n---\n{% set ns = namespace(found=true) %}\n{{- ns }}\n---\n{% set ns = namespace({\"found\": true}) %}\n{{- ns }}"
info: {}
input_file: crates/dbt-jinja/minijinja/tests/inputs/namespace.txt
---
{'foo': 45}
---
{'foo': {'bar': 42}}
---
{'found': true}
---
{'found': true}
